[workspace]

members = [
    # Production crates
    "canister",
    "interface",
    "types",
    "validation",
    "watchdog",

    # Crates for bootstrapping the state
    "bootstrap/state-builder",
    "bootstrap/uploader",

    # Crates used for testing only.
    "benchmarks",
    "e2e-tests/scenario-1",
    "e2e-tests/scenario-2",
    "e2e-tests/scenario-3",
    "e2e-tests/disable-api-if-not-fully-synced-flag",
    "test-utils",
    "ic-http",
    "ic-http/example_canister/src/canister_backend",
]

resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
bitcoin = "0.32.4"
byteorder = "1.4.3"
canbench-rs = { version = "0.1.8" }
candid = "0.10.6"
candid_parser = { version = "0.1.4" }
ciborium = "0.2.1"
clap = { version = "4.0.11", features = ["derive"] }
futures = "0.3.28"
hex = "0.4.3"
ic-btc-canister = { path = "./canister" }
ic-btc-interface = { path = "./interface" }
ic-btc-test-utils = { path = "./test-utils" }
ic-btc-types = { path = "./types" }
ic-btc-validation = { path = "./validation" }
ic-cdk = "0.15.1"
ic-cdk-macros = "0.15"
ic-http = { path = "./ic-http" }
ic-metrics-encoder = "1.0.0"
ic-stable-structures = "0.6.7"
lazy_static = "1.4.0"
pocket-ic = "4.0.0"
serde = "1.0.171"
serde_bytes = "0.11"
serde_json = "1.0.94"
tempfile = "3.10.1"
tokio = { version = "1.29.1", features = ["full"] }
secp256k1 = { version = "0.29.1", features = ["rand-std"] }

[profile.release-lto]
inherits = "release"
lto = true
opt-level = "s"
