[workspace]

members = [
    # Production crates
    "canister",
    "interface",
    "types",
    "validation",
    "watchdog",
    # Crates for bootstrapping the state
    "bootstrap/state-builder",
    "bootstrap/uploader",
    # Crates used for testing only.
    "benchmarks",
    "e2e-tests/scenario-1",
    "e2e-tests/scenario-2",
    "e2e-tests/scenario-3",
    "e2e-tests/disable-api-if-not-fully-synced-flag",
    "test-utils",
    "ic-http",
    "ic-http/example_canister/src/canister_backend",
]

resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
bitcoin = { package = "bitcoin-dogecoin", version = "0.32.7-doge.0" }
byteorder = "1.5.0"
canbench-rs = "0.4.0"
candid = "0.10.22"
candid_parser = "0.3.0"
ciborium = "0.2.2"
clap = { version = "4.5.60", features = ["derive"] }
datasize = "0.2.15"
futures = "0.3.32"
hex = "0.4.3"
hex_lit = "0.1.1"
ic-btc-canister = { path = "./canister" }
ic-btc-interface = { path = "./interface" }
ic-btc-test-utils = { path = "./test-utils" }
ic-btc-types = { path = "./types" }
ic-btc-validation = { path = "./validation" }
ic-cdk = "0.19.0"
ic-http = { path = "./ic-http" }
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.7.2"
lazy_static = "1.5.0"
pocket-ic = "12.0.0"
proptest = "1.10.0"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }

[profile.release-lto]
inherits = "release"
lto = true
opt-level = "s"
