[workspace]

members = [
    # Production crates
    "canister",
    "interface",
    "types",
    "validation",
    "watchdog",
    # Crates for bootstrapping the state
    "bootstrap/state-builder",
    "bootstrap/uploader",
    # Crates used for testing only.
    "benchmarks",
    "e2e-tests/scenario-1",
    "e2e-tests/scenario-2",
    "e2e-tests/scenario-3",
    "e2e-tests/disable-api-if-not-fully-synced-flag",
    "test-utils",
    "ic-http",
    "ic-http/example_canister/src/canister_backend",
]

resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
bitcoin = { package = "bitcoin-dogecoin", version = "0.32.7-doge.0" }
byteorder = "1.4.3"
canbench-rs = "0.4.0"
candid = "0.10.6"
candid_parser = "0.1.4"
ciborium = "0.2.1"
clap = { version = "4.0.11", features = ["derive"] }
datasize = "0.2.15"
futures = "0.3.28"
hex = "0.4.3"
hex_lit = "0.1.1"
ic-btc-canister = { path = "./canister" }
ic-btc-interface = { path = "./interface" }
ic-btc-test-utils = { path = "./test-utils" }
ic-btc-types = { path = "./types" }
ic-btc-validation = { path = "./validation" }
ic-cdk = "0.19.0"
ic-http = { path = "./ic-http" }
ic-metrics-encoder = "1.0.0"
ic-stable-structures = "0.7.2"
lazy_static = "1.4.0"
pocket-ic = "11.0.0"
proptest = "0.9.4"
serde = "1.0.171"
serde_bytes = "0.11"
serde_json = "1.0.94"
tempfile = "3.10.1"
tokio = { version = "1.44.2", features = ["full"] }

[profile.release-lto]
inherits = "release"
lto = true
opt-level = "s"
