[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
bench = false

[dependencies]
bitcoin = { workspace = true, features = ["use-serde"]}
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-btc-canister = { workspace = true }
ic-btc-interface = { workspace = true }
ic-btc-types = { workspace = true }
maplit = "1.0.2"
serde = "1.0"

[dev-dependencies]
clap = { workspace = true }
colored = "2.0.4"
lazy_static = { workspace = true }
serde_yaml = "0.9"

[[bench]]
name = "benches"
harness = false
path = "benches.rs"
