[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
bench = false

[dependencies]
bitcoin = { workspace = true, features = ["use-serde"]}
canbench = { path = "../../canbench/canbench-rs" }
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-btc-canister = { workspace = true }
ic-btc-interface = { workspace = true }
ic-btc-types = { workspace = true }
