[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
bench = false

[dependencies]
bitcoin = { workspace = true, features = ["serde"]}
canbench-rs = { workspace = true }
candid = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-btc-canister = { workspace = true, features = ["canbench-rs"] }
ic-btc-interface = { workspace = true }
ic-btc-test-utils = { workspace = true }
ic-btc-types = { workspace = true }
