[package]
name = "ic-btc-canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { workspace = true, features = ["use-serde"] }
candid = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
ic-btc-interface = { workspace = true }
ic-btc-validation = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = "1.4.0"
serde = { workspace = true }
serde_bytes = { workspace = true }

[[bin]]
name = "ic-btc-canister"
path = "src/main.rs"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bitcoin = { workspace = true, features = ["rand"] } # needed for generating secp256k1 keys.
byteorder = { workspace = true }
ic-btc-test-utils = { workspace = true }
maplit = "1.0.2"
proptest = "0.9.4"
tempfile = "3.2.0"

[features]
file_memory = []
