[package]
name = "ic-cdk-bitcoin-canister"
version = "0.2.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88.0"
repository = "https://github.com/dfinity/bitcoin-canister"
description = "Utility for making inter-canister calls to the Bitcoin canisters on the Internet Computer"
homepage = "https://docs.rs/ic-cdk-bitcoin-canister"
documentation = "https://docs.rs/ic-cdk-bitcoin-canister"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["internet-computer", "dfinity", "canister", "cdk", "bitcoin"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
candid = "0.10.24"
ic-btc-interface = { path = "../interface" }
ic-cdk = "0.20.0"