[package]
name = "ic-http"
description = "Mocking HTTPS Outcalls on the Internet Computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }

# Added to use non-blocking sleep to mock delayed responses.
# Currently wasm32 does not support tokio, so we need to disable it for wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
