[package]
name = "ic-btc-test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for the Bitcoin Canister on the Internet Computer"
homepage = "https://docs.rs/ic-btc-test-utils"
documentation = "https://docs.rs/ic-btc-test-utils"
license = "Apache-2.0"
include = ["src", "Cargo.toml", "../LICENSE"]
repository = "https://github.com/dfinity/bitcoin-canister"

[dependencies]
bitcoin = { workspace = true }
ic-btc-types = { workspace = true }
secp256k1 = { workspace = true }
