[package]
name = "watchdog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "watchdog-canister"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-cdk-timers = "0.1"
serde = { version = "1.0.158", features = [ "derive" ] }
serde_json = { workspace = true }
hex = { workspace = true }
async-trait = "0.1.67"
regex = "1.7.0"
futures = "0.3.27"
ic-http = { workspace = true }
serde_bytes = { workspace = true }
ic-btc-interface = { workspace = true }

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
assert-json-diff = "2.0.2"
