[package]
name = "watchdog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "watchdog"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.67"
candid = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-btc-interface = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.1"
ic-http = { workspace = true }
ic-metrics-encoder = { workspace = true }
regex = "1.7.0"
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
tokio = { workspace = true }
