[package]
name = "main-state-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
clap = { workspace = true }
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
hex = { workspace = true }
ic-btc-canister = { workspace = true, features = ["file_memory"] }
ic-btc-interface = { workspace = true }
ic-stable-structures = { workspace = true }

[workspace]
