[package]
name = "main-state-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.28.1"
clap = { version = "4.0.11", features = ["derive"] }
ciborium = "0.2.1"
hex = "0.4.3"
ic-btc-canister = { path = "../../canister", features = ["file_memory"] }
ic-btc-interface = { path = "../../interface" }
ic-btc-types = { path = "../../types" }
ic-stable-structures = "0.6.0-beta.1"

[workspace]
