[package]
name = "state-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build-balances"
path = "src/build_balances.rs"

[[bin]]
name = "build-address-utxos"
path = "src/build_address_utxos.rs"

[[bin]]
name = "build-utxos"
path = "src/build_utxos.rs"

[[bin]]
name = "combine-state"
path = "src/combine_state.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bitcoin = "0.28.1"
byteorder = "1.4.3"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
clap = { version = "4.0.11", features = ["derive"] }
hex = "0.4.3"
ic-btc-canister = { path = "../../canister", features = [] }
ic-btc-interface = { path = "../../interface" }
ic-stable-structures = "0.5.2"
integer-encoding = "3.0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusty-leveldb = "1.0.4"
