[package]
name = "state-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build-balances"
path = "src/build_balances.rs"

[[bin]]
name = "build-address-utxos"
path = "src/build_address_utxos.rs"

[[bin]]
name = "build-utxos"
path = "src/build_utxos.rs"

[[bin]]
name = "combine-state"
path = "src/combine_state.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bitcoin = { workspace = true }
byteorder = { workspace = true }
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
clap = { workspace = true }
hex = { workspace = true }
ic-btc-canister = { path = "../../canister", features = [] }
ic-btc-interface = { path = "../../interface" }
ic-stable-structures = { workspace = true }
integer-encoding = "3.0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusty-leveldb = "1.0.4"
