[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uploader"
path = "src/main.rs"

# The upload script is added here as an example and not a binary because making it
# a binary would force us to put all its dependencies under [dependencies], and they'll
# break the canister compilation as several of them cannot be compiled into wasm.
[[example]]
name = "upload"
path = "src/upload.rs"

[[example]]
name = "compute_hashes"
path = "src/compute_hashes.rs"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
sha256 = "1.1.1"
serde = "1.0.132"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.0.11", features = ["derive"] }
garcon = "0.2.3"
ic-agent = "0.21.0"
url = "2.3.1"
