[package]
name = "uploader"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[[bin]]
name = "uploader"
path = "src/main.rs"

# The upload script is added here as an example and not a binary because making it
# a binary would force us to put all its dependencies under [dependencies], and they'll
# break the canister compilation as several of them cannot be compiled into wasm.
[[example]]
name = "upload"
path = "src/upload.rs"

[[example]]
name = "compute_hashes"
path = "src/compute_hashes.rs"

[dependencies]
candid = { workspace = true }
hex.workspace = true
ic-cdk = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { workspace = true }
ic-agent = "0.45.0"
url = "2.3.1"
