[package]
name = "charge-cycles-on-reject"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies]
candid = { workspace = true }
e2e-test-utils = { workspace = true }
ic-btc-interface = { workspace = true }
pocket-ic = { workspace = true }
scenario-1 = { path = "../scenario-1" }
serde_bytes = { workspace = true }
