[package]
name = "management-canister-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.28.1"
candid = "0.7.4"
ic-btc-test-utils = { git = "https://github.com/dfinity/ic", rev = "0acc04638bb2be562c146c2480e6217eb572aa77" }
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
serde = "1.0.132"
