[package]
name = "scenario-1"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
candid = { workspace = true }
ic-btc-test-utils = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
e2e-test-utils = { workspace = true }
ic-btc-interface = { workspace = true }
pocket-ic = { workspace = true }
