[package]
name = "e2e-test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
candid = { workspace = true }
ic-btc-canister = { workspace = true }
ic-btc-interface = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
