[package]
name = "fake-bitcoin-canister"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "fake-bitcoin-canister"
path = "src/main.rs"

[dependencies]
candid = "0.8.2"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
ic-btc-interface = { path = "../../../interface" }
serde = { version = "1.0.158", features = [ "derive" ] }
serde_bytes = "0.11"
ic-metrics-encoder = "1.0.0"
