[package]
name = "fake-explorers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fake-explorers"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
rustls = { version = "0.21.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24.0", default-features = false }
futures-util = "0.3.28"
rustls-pemfile = "1.0.2"
serde_json = "1.0.94"
clap = { version = "3.1.8", features = ["derive"] }
