[package]
name = "canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "canister_backend"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-http = { workspace = true }
serde = { version = "1.0.158", features = [ "derive" ] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
futures = "0.3.27"
