[package]
name = "canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "canister_backend"
path = "src/main.rs"

[dependencies]
candid = "0.8.1"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
ic-http = {path = "../../../"}
serde = { workspace = true, features = [ "derive" ] }
serde_json = "1.0.94"

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
