[package]
name = "canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "canister_backend"
path = "src/main.rs"

[dependencies]
candid = "0.9.1"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"
ic-http = {path = "../../../"}
serde = { workspace = true, features = [ "derive" ] }
serde_json = "1.0.94"

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
